# Robot-ISCARA

./: .gitignore  README.md  file
Software/Arduino/comunication/: comunication.ino
Software/PC/: connection.cpp  connection.hpp  exe  lconnection.cpp  lconnection.hpp  main.cpp  makefile  wconnection.cpp  wconnection.hpp
Software/PC/Qt/Qt/: CMakeLists.txt  console.cpp  console.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portwidget.cpp  serialcommunication.cpp  serialcommunication.h  serialport.cpp  serialport.h  timer.cpp  timer.h
Software/PC/Soft/: Soft.cbp  Soft.depend  Soft.layout
Software/Qt/: CMakeLists.txt  ReadMe.txt  command_list.txt  function.cpp  function.h  interpreter.cpp  interpreter.h  limit.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  robotvariables.cpp  robotvariables.hpp
Software/Qt/kinematics/: forwardKinematics.m  inverseKinematics.m
Software/Qt/source/: CMakeLists.txt  interpreter.cpp  interpreter.h  limit.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol.cpp  robotvariables.cpp  robotvariables.hpp  scriptList.ui  scriptlist.cpp  scriptlist.h  scriptlist.ui  serialcommunication.cpp  serialcommunication.h
